<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ahmedmar3y.project2_scorekeeper.MainActivity"

        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team1"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_marginLeft="30dp"            />

                <TextView
             style="@style/textpoint"
                    android:text="@string/point"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="60dp"
                    android:id="@+id/point1"
                    />
                <TextView
                    style="@style/textpoint"

                    android:text="@string/fouls"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="60dp"
                    android:id="@+id/foul1"

                    />
                <Button

                    style="@style/scorebutton"

                    android:text="@string/Score"
                    android:id="@+id/score1"
                    android:onClick="score1_action"
                    />
                <Button

                    style="@style/scorebutton"

                    android:text="@string/foul"
                    android:id="@+id/f1"
                    android:onClick="f1_action"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team2"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_marginLeft="30dp"
                    />
                <TextView
                    style="@style/textpoint"

                    android:text="@string/point"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="60dp"
                    android:id="@+id/point2"

                    />
                <TextView
                    style="@style/textpoint"

                    android:text="@string/fouls"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="60dp"
                    android:id="@+id/foul2"

                    />
                <Button

                    style="@style/scorebutton"

                    android:text="@string/Score"
                    android:id="@+id/score2"
                    android:onClick="score2_action"
                    />
                <Button

                    style="@style/scorebutton"

                    android:text="@string/foul"
                    android:id="@+id/f2"
                    android:onClick="f2_action"
                    />

            </LinearLayout>



        </LinearLayout>


        <Button
            android:id="@+id/rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="reset_action"
            />



    </LinearLayout>

</ScrollView>
